--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <body>
     <div id="content">
       <div id="status">
-        <div class="denyIcon">
-          <img src="images/deny.svg" alt="Room at capacity" class="status_image">
-        </div>
-        <div id="occupancy">1 out of 2 spaces available in this space.</div>
-        <div id="instruction">Tag you fob to check in or out of this room.</div>
+        <div id="glyph">&#10123;</div>
+        <div id="occupancy">2 out of 3 spaces available in this space.</div>
+        <div id="instruction">Tap your fob to check in or out of this room.</div>
       </div>
     </div>
     <script src="scripts/index.js"></script>
