Added demo display toggle

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div id="content">
       <div id="status">
-        <div id="glyph">&#10123;</div>
-        <div id="occupancy">2 out of 3 spaces available in this space.</div>
+        <div onclick="reportAttempt('test')" id="glyph">&#10122;</div>
+        <div id="occupancy">1 out of 3 spaces are available in this space.</div>
         <div id="instruction">Tap your fob to check in or out of this room.</div>
       </div>
     </div>
