--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="content">
       <div id="status">
         <div onclick="reportAttempt('test')" id="glyph">&#10122;</div>
-        <div id="occupancy">1 out of 3 spaces are available in this space.</div>
+        <div id="occupancy">1 out of 3 spots available in this space.</div>
         <div id="instruction">Tap your fob to check in or out of this room.</div>
       </div>
     </div>
