--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="refresh" content="300">
     <title>Ace Makerspace Check In</title>
     <link href="styles/styles.css" type="text/css" rel="stylesheet">
     <link rel="manifest" href="/manifest.webmanifest">
+    <script src="scripts/index.js"></script>
   </head>
-  <body>
+  <body onload="pagedLoaded()">
     <div id="content">
       <div id="status">
-        <div onclick="reportAttempt('test')" id="glyph">&#10122;</div>
-        <div id="occupancy">1 out of 3 spots available in this space.</div>
-        <div id="instruction">Tap your fob to check in or out of this room.</div>
+        <div id="glyph">&#10122;</div>
+        <div id="occupancy">people are currently in the workshop.</div>
+        <div id="instruction">Tap your fob to Check-in or Check-out of the Workshops.</div>
       </div>
     </div>
-    <script src="scripts/index.js"></script>
     <script>
       // This is the service worker with the Cache-first network
       // Alternatively, add the js file to your page at the very top to register service worker
